add: html and main idea

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                         <input type="text" class="form-control" id="nome" name="nome" placeholder="Insira o nome do carro para pesquisa">
                         <label for="banco">Meu banco faz financiamento?</label>
                         <input type="text" class="form-control" id="banco" name="banco" placeholder="Insira o nome do banco">
-                        </div> 
+                        <button type="submit" class="btn btn-primary">Consultar</button>    
+                    </div> 
             </div>
         </div>
     </section>
@@ -48,6 +49,9 @@
         <!-- Conteúdo da Seção 2 -->
         <div class="container">
             <div class="row custom-grid">
+                <button type="button" class="btn btn-primary">Clique aqui para visualizar carros com 10% de desconto!!</button>
+                <button type="button" class="btn btn-secondary">clique aqui para visualizar grandes clássicos </button>
+                <button type="button" class="btn btn-success">clique aqui para visualizar </button>
                 
             </div>
         </div>
