add: 2 first APIs

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             </div>
         </nav>
     </header>
+    <div class="container">
+        <p>Loja meu carro novo! cnpj verificado e ativo!</p>
+        <p id="api1"></p>
+        <p>Loja meu carro novo! site regular!</p>
+        <p id="api2"></p>
+    </div>
 
     <section id="section1" class="section">
         <h2>Consulte as informações básicas no formulário abaixo:</h2>
@@ -35,11 +41,13 @@
                 <form class="col-md-6">
                     <div class="form-group">
                         <label for="nome">Nome do carro dos seus sonhos:</label>
-                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Insira o nome do carro para pesquisa">
+                        <input type="text" class="form-control" id="nome" name="nome"
+                            placeholder="Insira o nome do carro para pesquisa">
                         <label for="banco">Meu banco faz financiamento?</label>
-                        <input type="text" class="form-control" id="banco" name="banco" placeholder="Insira o nome do banco">
-                        <button type="submit" class="btn btn-primary">Consultar</button>    
-                    </div> 
+                        <input type="text" class="form-control" id="banco" name="banco"
+                            placeholder="Insira o nome do banco">
+                        <button type="submit" class="btn btn-primary">Consultar</button>
+                    </div>
             </div>
         </div>
     </section>
@@ -49,23 +57,25 @@
         <!-- Conteúdo da Seção 2 -->
         <div class="container">
             <div class="row custom-grid">
-                <button type="button" class="btn btn-primary">Clique aqui para visualizar carros com 10% de desconto!!</button>
+                <button type="button" class="btn btn-primary">Clique aqui para visualizar carros com 10% de
+                    desconto!!</button>
                 <button type="button" class="btn btn-secondary">clique aqui para visualizar grandes clássicos </button>
-                <button type="button" class="btn btn-success">clique aqui para visualizar </button>
-                
+                <button type="button" class="btn btn-success">clique aqui para visualizar lançamentos 2024</button>
+
             </div>
         </div>
     </section>
     <!--
     -->
-  
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="scripts.js"></script>
 
-    <footer>
-        <p>&copy; 2023 Meu Carro Novo!</p>
+    <footer class="footer">
+        <p>&copy; 2023 Meu Carro Novo! CNPJ: 41.030.394/0001-08</p>
     </footer>
 
 
