--- a/index.html
+++ b/index.html
@@ -27,27 +27,28 @@
         </nav>
     </header>
     <div class="container">
-        <p>Loja meu carro novo! cnpj verificado e ativo!</p>
+        <p>Loja Meu Carro Novo! CNPJ verificado e ativo!</p>
         <p id="api1"></p>
-        <p>Loja meu carro novo! site regular!</p>
+        <p>Loja Meu Carro Novo! site oficial!</p>
         <p id="api2"></p>
     </div>
 
     <section id="section1" class="section">
-        <h2>Consulte as informações básicas no formulário abaixo:</h2>
+        <h2>Consulte preços e bancos:</h2>
         <!-- Conteúdo da Seção 1 -->
         <div class="container">
             <div class="row custom-grid">
                 <form class="col-md-6">
-                    <div class="form-group">
-                        <label for="nome">Nome do carro dos seus sonhos:</label>
-                        <input type="text" class="form-control" id="nome" name="nome"
-                            placeholder="Insira o nome do carro para pesquisa">
-                        <label for="banco">Meu banco faz financiamento?</label>
+                    <div class="form-group" id="form-fipe-banco">
+                        <label for="carro">codigo FIPE do carro:</label>
+                        <input type="text" class="form-control" id="carro" name="carro"
+                            placeholder="Insira o codigo FIPE 000000-0">
+                        <!-- <label for="banco">Meu banco faz financiamento?</label>
                         <input type="text" class="form-control" id="banco" name="banco"
-                            placeholder="Insira o nome do banco">
+                            placeholder="Insira o Código do banco"> -->
                         <button type="submit" class="btn btn-primary">Consultar</button>
                     </div>
+                    <div id="fipe"></div>
             </div>
         </div>
     </section>
@@ -69,10 +70,10 @@
     -->
 
 
+    <script src="scripts.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="scripts.js"></script>
 
     <footer class="footer">
         <p>&copy; 2023 Meu Carro Novo! CNPJ: 41.030.394/0001-08</p>
