fix: eventlistener, preventDefault

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <div class="container">
-        <p>Clima para Viagem! CNPJ verificado e ativo!</p>
+        <p>Clima para Viagem! Datas feriados nacionais deste ano!</p>
         <p id="api1"></p>
         <p>Clima para Viagem! site oficial!</p>
         <p id="api2"></p>
@@ -40,12 +40,12 @@
             <div class="row custom-grid">
                 <form class="col-md-6">
                     <div class="form-group" id="form-apis">
-                        <label for="estado">Sigla do Estado</label>
-                        <input type="text" class="form-control" id="estado" name="estado"
-                            placeholder="Insira a sigla">
-                        <label for="cidade">Cidade</label>
+                        <label for="cidade">Informa a cidade:</label>
                         <input type="text" class="form-control" id="cidade" name="cidade"
                             placeholder="Insira o nome da cidade">
+                        <!-- <label for="cidade">Cidade</label>
+                        <input type="text" class="form-control" id="cidade" name="cidade"
+                            placeholder="Insira o nome da cidade"> -->
                         <button type="submit" class="btn btn-primary">Consultar</button>
                     </div>
                     <div id="resultado"></div>
@@ -76,7 +76,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <footer class="footer">
-        <p>&copy; 2023 Meu Carro Novo! CNPJ: 41.030.394/0001-08</p>
+        <p>&copy; 2023 Clima para viagem! CNPJ: 43.030.394/0001-08</p>
     </footer>
 
 
