add: segunda parte completa

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                     </div>
                 </section>
     <section id="section2" class="section">
-        <h2>Seção 2</h2>
+        <h2>Seção 2: botão da diversão e informações</h2>
         <!-- Conteúdo da Seção 2 -->
         <div class="container">
             <div class="row custom-grid">
-                <button type="button" class="btn btn-primary" id="botao1">Cli</button>
+                <button type="button" class="btn btn-primary" id="botao1">Cotaçao do dolar e informações</button>
                 <div id="resultado-botao1"></div>
-                <button type="button" class="btn btn-secondary" id="botao2-">cliq</button>
+                <button type="button" class="btn btn-secondary" id="botao2">Clique aqui para uma foto aleatória!!</button>
                 <div id="resultado-botao2"></div>
 
             </div>
