add: readme fix: português html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="#section1">Seção 1</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#section2">Seção 2</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#section1">Consultas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#section2">Botões</a></li>
                 </ul>
             </div>
         </nav>
@@ -69,7 +69,7 @@
         <!-- Conteúdo da Seção 2 -->
         <div class="container">
             <div class="row custom-grid">
-                <button type="button" class="btn btn-primary" id="botao1">Cotaçao do dolar e informações</button>
+                <button type="button" class="btn btn-primary" id="botao1">Cotação do Dólar e informações</button>
                 <div id="resultado-botao1"></div>
                 <button type="button" class="btn btn-secondary" id="botao2">Clique aqui para uma foto aleatória!!</button>
                 <div id="resultado-botao2"></div>
