fix: index.html

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                             placeholder="Insira o nome da cidade">
                         <button type="submit" class="btn btn-primary">Consultar</button>
                     </div>
+                </form>
                 </div>
                 <div id="resultado-clima"></div>
-                </form>
                         <h2>Consulte o código do banco:</h2>
                         <div class="row custom-grid">
                             <form class="col-md-6" id="form-banco">
-                                <div class="form-group" id="form-apis">
+                                <div class="form-group">
                                     <label for="banco">Informa o código de banco:</label>
                                     <input type="text" class="form-control" id="banco" name="banco"
                                         placeholder="Insira o código do banco">
